feat: Crete expense service